Modificacoes Demo App

--- a/2017/Mobile-Dev/Android-Udemy/DemoAPp/app/src/main/res/layout/activity_main.xml
+++ b/2017/Mobile-Dev/Android-Udemy/DemoAPp/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,37 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.viniciuspv.demoapp.MainActivity">
+    tools:context="com.viniciuspv.demoapp.MainActivity"
+    android:layout_marginLeft="30dp"
+    style="@android:style/TextAppearance.DeviceDefault.Large">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="My Great App"
+        android:id="@+id/HelloViniTextVini"
+        android:background="@color/colorAccent"
+        android:textColor="@android:color/background_dark"
+        android:textSize="50sp"
+        android:gravity="center_horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="9dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="156dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello VIni!"
-        android:id="@+id/HelloViniTextVini" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:id="@+id/textView4"
+        android:text="My Great App"
+        android:textSize="50sp"
+        android:textColor="@android:color/black"
+        android:background="@color/colorAccent"
+        android:padding="10dp" />
+
 </RelativeLayout>
