Aula de Android 03 Março

--- a/2017/Mobile-Dev/Android-Udemy/DemoAPp/app/src/main/res/layout/activity_main.xml
+++ b/2017/Mobile-Dev/Android-Udemy/DemoAPp/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,6 @@
         android:text="My Great App"
         android:textSize="50sp"
         android:textColor="@android:color/black"
-        android:background="@color/colorAccent"
-        android:padding="10dp" />
+        android:background="@color/colorAccent" />
 
 </RelativeLayout>
