--- a/2017/Mobile-Dev/Calculadora/app/src/main/res/layout/activity_principal.xml
+++ b/2017/Mobile-Dev/Calculadora/app/src/main/res/layout/activity_principal.xml
@@ -19,9 +19,9 @@
         android:id="@+id/InputExpressionTextField"
         android:background="@drawable/gradient"
         android:layout_alignParentTop="true"
-        android:layout_above="@+id/button7"
+        android:layout_above="@+id/buttonClear"
         android:text=""
-        android:gravity="bottom|right"
+        android:gravity="bottom|left"
         android:textSize="60sp" />
 
     <Button
@@ -30,10 +30,10 @@
         android:id="@+id/button8"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
-        android:padding="-5,-5,-5,-5"
         android:layout_above="@+id/button4"
-        android:layout_toRightOf="@+id/button7"
-        android:layout_toEndOf="@+id/button7" />
+        android:layout_toRightOf="@+id/buttonClear"
+        android:layout_toEndOf="@+id/buttonClear"
+        android:onClick="insertNumber"/>
 
     <Button
         android:text="6"
@@ -43,7 +43,8 @@
         android:layout_height="@android:dimen/app_icon_size"
         android:layout_above="@+id/button3"
         android:layout_toRightOf="@+id/button5"
-        android:layout_toEndOf="@+id/button5" />
+        android:layout_toEndOf="@+id/button5"
+        android:onClick="insertNumber"/>
 
     <Button
         android:text="2"
@@ -51,32 +52,35 @@
         android:id="@+id/button2"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
-        android:layout_above="@+id/buttonEqual"
+        android:layout_above="@+id/buttonComa"
         android:layout_toRightOf="@+id/button1"
-        android:layout_toEndOf="@+id/button1" />
+        android:layout_toEndOf="@+id/button1"
+        android:onClick="insertNumber"/>
 
     <Button
         android:text="9"
         android:layout_width="wrap_content"
-        android:id="@+id/button31"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
-        android:padding="-5,-5,-5,-5"
+
         android:layout_alignBaseline="@+id/button8"
         android:layout_alignBottom="@+id/button8"
         android:layout_toRightOf="@+id/button8"
-        android:layout_toEndOf="@+id/button8" />
+        android:layout_toEndOf="@+id/button8"
+        android:id="@+id/button9"
+        android:onClick="insertNumber"/>
 
     <Button
         android:text="7"
         android:layout_width="wrap_content"
-        android:id="@+id/button35"
+        android:id="@+id/button7"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
         android:layout_alignBaseline="@+id/button8"
         android:layout_alignBottom="@+id/button8"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="insertNumber"/>
 
     <Button
         android:text="0"
@@ -84,18 +88,20 @@
         android:id="@+id/button0"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
-        android:padding="-5,-5,-5,-5"
-        android:layout_alignBaseline="@+id/buttonEqual"
-        android:layout_alignBottom="@+id/buttonEqual"
+
+        android:layout_alignBaseline="@+id/buttonComa"
+        android:layout_alignBottom="@+id/buttonComa"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2" />
+        android:layout_toStartOf="@+id/button2"
+        android:onClick="insertNumber"
+        />
 
     <Button
         android:text=","
         android:layout_width="wrap_content"
-        android:id="@+id/buttonEqual"
+        android:id="@+id/buttonComa"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
         android:layout_alignParentBottom="true"
@@ -105,7 +111,7 @@
     <Button
         android:text="AC"
         android:layout_width="wrap_content"
-        android:id="@+id/button7"
+        android:id="@+id/buttonClear"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
         android:layout_above="@+id/button8"
@@ -115,32 +121,32 @@
     <Button
         android:text="X²"
         android:layout_width="wrap_content"
-        android:id="@+id/button37"
+        android:id="@+id/buttonSquared"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
         android:layout_above="@+id/button8"
-        android:layout_toRightOf="@+id/button7"
-        android:layout_toEndOf="@+id/button7" />
+        android:layout_toRightOf="@+id/buttonClear"
+        android:layout_toEndOf="@+id/buttonClear" />
 
     <Button
         android:text="%"
         android:layout_width="wrap_content"
-        android:id="@+id/button38"
+        android:id="@+id/buttonPercent"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
-        android:layout_alignBaseline="@+id/button37"
-        android:layout_alignBottom="@+id/button37"
+        android:layout_alignBaseline="@+id/buttonSquared"
+        android:layout_alignBottom="@+id/buttonSquared"
         android:layout_toRightOf="@+id/button8"
         android:layout_toEndOf="@+id/button8" />
 
     <Button
         android:layout_width="wrap_content"
-        android:id="@+id/button36"
+        android:id="@+id/buttonDivision"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
         android:text="\u00F7"
         android:textSize="20sp"
-        android:layout_alignTop="@+id/button38"
+        android:layout_alignTop="@+id/buttonPercent"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -163,7 +169,8 @@
         android:layout_alignBaseline="@+id/button2"
         android:layout_alignBottom="@+id/button2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="insertNumber"/>
 
     <Button
         android:text="4"
@@ -174,19 +181,21 @@
         android:layout_alignBaseline="@+id/button5"
         android:layout_alignBottom="@+id/button5"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="insertNumber"/>
 
     <Button
         android:text="="
         android:layout_width="wrap_content"
-        android:id="@+id/button34"
+        android:id="@+id/buttonEqual"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
         android:layout_below="@+id/button3"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_toRightOf="@+id/button2"
-        android:layout_toEndOf="@+id/button2" />
+        android:layout_toEndOf="@+id/button2"
+        android:onClick="insertNumber"/>
 
     <Button
         android:text="3"
@@ -194,16 +203,16 @@
         android:id="@+id/button3"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
-        android:padding="-5,-5,-5,-5"
         android:layout_alignBaseline="@+id/button2"
         android:layout_alignBottom="@+id/button2"
         android:layout_toRightOf="@+id/button2"
-        android:layout_toEndOf="@+id/button2" />
+        android:layout_toEndOf="@+id/button2"
+        android:onClick="insertNumber"/>
 
     <Button
         android:text="-"
         android:layout_width="wrap_content"
-        android:id="@+id/button32"
+        android:id="@+id/buttonMinus"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
         android:textSize="20sp"
@@ -214,22 +223,21 @@
     <Button
         android:text="+"
         android:layout_width="wrap_content"
-        android:id="@+id/button39"
+        android:id="@+id/buttonPlus"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
         android:textSize="20sp"
-        android:layout_below="@+id/button9"
+        android:layout_below="@+id/buttonMultiply"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <Button
         android:text="x"
         android:layout_width="wrap_content"
-        android:id="@+id/button9"
+        android:id="@+id/buttonMultiply"
         android:background="@drawable/gradient"
         android:layout_height="@android:dimen/app_icon_size"
-        android:padding="-5,-5,-5,-5"
-        android:layout_below="@+id/button36"
+        android:layout_below="@+id/buttonDivision"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
