--- a/2017/Mobile-Dev/Calculadora/app/src/main/res/layout/activity_principal.xml
+++ b/2017/Mobile-Dev/Calculadora/app/src/main/res/layout/activity_principal.xml
@@ -20,16 +20,15 @@
         android:background="@drawable/gradient"
         android:layout_alignParentTop="true"
         android:layout_above="@+id/buttonClear"
-        android:text=""
         android:gravity="bottom|left"
-        android:textSize="60sp" />
+        android:textSize="50sp" />
 
     <Button
         android:text="8"
         android:layout_width="wrap_content"
         android:id="@+id/button8"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/button4"
         android:layout_toRightOf="@+id/buttonClear"
         android:layout_toEndOf="@+id/buttonClear"
@@ -40,7 +39,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/button6"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/button3"
         android:layout_toRightOf="@+id/button5"
         android:layout_toEndOf="@+id/button5"
@@ -51,7 +50,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/button2"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/buttonComa"
         android:layout_toRightOf="@+id/button1"
         android:layout_toEndOf="@+id/button1"
@@ -61,7 +60,7 @@
         android:text="9"
         android:layout_width="wrap_content"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
 
         android:layout_alignBaseline="@+id/button8"
         android:layout_alignBottom="@+id/button8"
@@ -75,7 +74,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/button7"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button8"
         android:layout_alignBottom="@+id/button8"
         android:layout_alignParentLeft="true"
@@ -87,7 +86,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/button0"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
 
         android:layout_alignBaseline="@+id/buttonComa"
         android:layout_alignBottom="@+id/buttonComa"
@@ -103,7 +102,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/buttonComa"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/button0"
         android:layout_toEndOf="@+id/button0" />
@@ -113,7 +112,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/buttonClear"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/button8"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -123,7 +122,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/buttonSquared"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/button8"
         android:layout_toRightOf="@+id/buttonClear"
         android:layout_toEndOf="@+id/buttonClear" />
@@ -133,7 +132,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/buttonPercent"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/buttonSquared"
         android:layout_alignBottom="@+id/buttonSquared"
         android:layout_toRightOf="@+id/button8"
@@ -143,7 +142,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/buttonDivision"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:text="\u00F7"
         android:textSize="20sp"
         android:layout_alignTop="@+id/buttonPercent"
@@ -155,7 +154,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/button5"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/button2"
         android:layout_toRightOf="@+id/button4"
         android:layout_toEndOf="@+id/button4" />
@@ -165,7 +164,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/button1"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button2"
         android:layout_alignBottom="@+id/button2"
         android:layout_alignParentLeft="true"
@@ -177,7 +176,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/button4"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button5"
         android:layout_alignBottom="@+id/button5"
         android:layout_alignParentLeft="true"
@@ -189,7 +188,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/buttonEqual"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/button3"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -202,7 +201,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/button3"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button2"
         android:layout_alignBottom="@+id/button2"
         android:layout_toRightOf="@+id/button2"
@@ -214,7 +213,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/buttonMinus"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:textSize="20sp"
         android:layout_alignTop="@+id/button3"
         android:layout_alignParentRight="true"
@@ -225,7 +224,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/buttonPlus"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:textSize="20sp"
         android:layout_below="@+id/buttonMultiply"
         android:layout_alignParentRight="true"
@@ -236,7 +235,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/buttonMultiply"
         android:background="@drawable/gradient"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/buttonDivision"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
