--- a/2017/Mobile-Dev/Calculadora/app/src/main/res/layout/activity_principal.xml
+++ b/2017/Mobile-Dev/Calculadora/app/src/main/res/layout/activity_principal.xml
@@ -115,7 +115,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/button8"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="selfOperations"/>
 
     <Button
         android:text="X²"
@@ -147,7 +148,8 @@
         android:textSize="20sp"
         android:layout_alignTop="@+id/buttonPercent"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="insertOperator"/>
 
     <Button
         android:text="5"
@@ -157,7 +159,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/button2"
         android:layout_toRightOf="@+id/button4"
-        android:layout_toEndOf="@+id/button4" />
+        android:layout_toEndOf="@+id/button4"
+        android:onClick="insertNumber"/>
 
     <Button
         android:text="1"
@@ -194,7 +197,7 @@
         android:layout_alignParentEnd="true"
         android:layout_toRightOf="@+id/button2"
         android:layout_toEndOf="@+id/button2"
-        android:onClick="insertNumber"/>
+        android:onClick="calcOperation"/>
 
     <Button
         android:text="3"
@@ -228,7 +231,8 @@
         android:textSize="20sp"
         android:layout_below="@+id/buttonMultiply"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="insertOperator"/>
 
     <Button
         android:text="x"
@@ -238,6 +242,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonDivision"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="insertOperator" />
 
 </RelativeLayout>
