--- a/2017/Linguagem-de-ProgramacaoII/Aula28Abril/src/aula28abril/Principal.form
+++ b/2017/Linguagem-de-ProgramacaoII/Aula28Abril/src/aula28abril/Principal.form
@@ -30,6 +30,7 @@
                       <Component id="jButtonConectar" min="-2" pref="100" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButtonConsultar" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                       <Component id="jButtonInserir" min="-2" pref="108" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButtonAlterar" min="-2" pref="98" max="-2" attributes="0"/>
@@ -66,7 +67,6 @@
                           <Component id="cargoTextField" min="-2" pref="227" max="-2" attributes="0"/>
                           <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
