Feature de adicionar usuario completa

--- a/2017/Segundo  Semestre/Banco de Dados III/Loja-Suplementos/src/main/resources/fxml/MainScreen.fxml
+++ b/2017/Segundo  Semestre/Banco de Dados III/Loja-Suplementos/src/main/resources/fxml/MainScreen.fxml
@@ -7,30 +7,66 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.loja.suplementos.PrincipalController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
         <URL value="@/styles/Styles.css" />
     </stylesheets>
    <children>
-      <Label layoutX="223.0" layoutY="112.0" text="Second Screen" />
-      <Button layoutX="238.0" layoutY="171.0" mnemonicParsing="false" onAction="#Hello" text="HelloButton" />
-      <MenuBar>
+      <MenuBar fx:id="menuBar">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
+          <Menu mnemonicParsing="false" text="User">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" onAction="#addUserMenu" text="Add User" />
+                  <MenuItem mnemonicParsing="false" text="Alter User" />
+                  <MenuItem mnemonicParsing="false" text="Logout" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
+          <Menu mnemonicParsing="false" text="Sales orders">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+              <MenuItem mnemonicParsing="false" text="Add Sale Order" />
+                  <MenuItem mnemonicParsing="false" text="Search..." />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Help">
+          <Menu mnemonicParsing="false" text="Purchase orders">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" text="Add purchase order" />
+                  <MenuItem mnemonicParsing="false" text="Search..." />
             </items>
           </Menu>
+            <Menu mnemonicParsing="false" text="Suppliers">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Add Supplier" />
+                  <MenuItem mnemonicParsing="false" text="Change Supplier settings " />
+                  <MenuItem mnemonicParsing="false" text="Search..." />
+              </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Products">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Add a Product" />
+                  <MenuItem mnemonicParsing="false" text="Change a Product" />
+                  <MenuItem mnemonicParsing="false" text="Pesquisar..." />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Brands">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Add new Brand" />
+                  <MenuItem mnemonicParsing="false" text="Change a Brand Setting..." />
+                  <MenuItem mnemonicParsing="false" text="Search..." />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Types">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Add new Product Type" />
+                  <MenuItem mnemonicParsing="false" text="Change a Type Setting..." />
+                  <MenuItem mnemonicParsing="false" text="Search..." />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="History">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Check History" />
+                  <MenuItem mnemonicParsing="false" text="Search..." />
+               </items>
+            </Menu>
         </menus>
       </MenuBar>
    </children>
