--- a/2017/Segundo  Semestre/Banco de Dados III/Loja-Suplementos/src/main/resources/fxml/LoginScreen.fxml
+++ b/2017/Segundo  Semestre/Banco de Dados III/Loja-Suplementos/src/main/resources/fxml/LoginScreen.fxml
@@ -6,11 +6,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.loja.suplementos.FXMLController">
+<AnchorPane id="AnchorPane" prefHeight="211.0" prefWidth="330.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <Button fx:id="loginButton" layoutX="211.0" layoutY="157.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Entrar" />
+      <Button fx:id="loginButton" layoutX="236.0" layoutY="168.0" mnemonicParsing="false" onAction="#connectDBPostgre" prefHeight="29.0" prefWidth="80.0" text="Sign in" />
       <TextField fx:id="usernameTextField" layoutX="80.0" layoutY="54.0" promptText="Digite o seu Usuario" />
-      <PasswordField fx:id="passwordField" layoutX="80.0" layoutY="106.0" promptText="Senha" />
+      <PasswordField fx:id="passwordField" layoutX="80.0" layoutY="125.0" promptText="Senha" />
+      <Label layoutX="80.0" layoutY="28.0" text="Username" />
+      <Label layoutX="80.0" layoutY="96.0" text="Password" />
     </children>
 </AnchorPane>
