--- a/2017/Segundo  Semestre/Banco de Dados III/Loja-Suplementos/src/main/resources/fxml/MainScreen.fxml
+++ b/2017/Segundo  Semestre/Banco de Dados III/Loja-Suplementos/src/main/resources/fxml/MainScreen.fxml
@@ -48,7 +48,7 @@
             </Menu>
             <Menu mnemonicParsing="false" text="Brands">
                <items>
-                  <MenuItem mnemonicParsing="false" text="Add new Brand" />
+                  <MenuItem mnemonicParsing="false" onAction="#addBrands" text="Add new Brand" />
                   <MenuItem mnemonicParsing="false" text="Change a Brand Setting..." />
                   <MenuItem mnemonicParsing="false" text="Search..." />
                </items>
