View de pesquisa de tipos, controller de pesquisa de tipos, métodos de pesquisa de tipos.

--- a/2017/Segundo  Semestre/Banco de Dados III/Loja-Suplementos/src/main/resources/fxml/MainScreen.fxml
+++ b/2017/Segundo  Semestre/Banco de Dados III/Loja-Suplementos/src/main/resources/fxml/MainScreen.fxml
@@ -57,7 +57,7 @@
                <items>
                   <MenuItem mnemonicParsing="false" onAction="#addTypes" text="Add new Product Type" />
                   <MenuItem mnemonicParsing="false" text="Change a Type Setting..." />
-                  <MenuItem mnemonicParsing="false" text="Search..." />
+                  <MenuItem mnemonicParsing="false" onAction="#searchTypes" text="Search..." />
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="History">
