--- a/2017/Segundo  Semestre/Banco de Dados III/Loja-Suplementos/src/main/resources/fxml/MainScreen.fxml
+++ b/2017/Segundo  Semestre/Banco de Dados III/Loja-Suplementos/src/main/resources/fxml/MainScreen.fxml
@@ -32,6 +32,13 @@
                   <MenuItem mnemonicParsing="false" text="Search..." />
             </items>
           </Menu>
+            <Menu mnemonicParsing="false" text="Clients">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#addClient" text="Add Client" />
+                  <MenuItem mnemonicParsing="false" text="Change Client settings " />
+                  <MenuItem mnemonicParsing="false" onAction="#searchClients" text="Search..." />
+               </items>
+            </Menu>
             <Menu mnemonicParsing="false" text="Suppliers">
               <items>
                 <MenuItem mnemonicParsing="false" text="Add Supplier" />
