--- a/2017/Second-Semester/Database-III/Loja-Suplementos/src/main/resources/fxml/AddSale.fxml
+++ b/2017/Second-Semester/Database-III/Loja-Suplementos/src/main/resources/fxml/AddSale.fxml
@@ -16,16 +16,16 @@
    <children>
       <Label layoutX="65.0" layoutY="61.0" text="Client Name:" />
       <Button layoutX="371.0" layoutY="484.0" mnemonicParsing="false" onAction="#cancel" prefHeight="29.0" prefWidth="95.0" text="Cancel" />
-      <Button layoutX="483.0" layoutY="484.0" mnemonicParsing="false" onAction="#checkForm" prefHeight="29.0" prefWidth="95.0" text="Add Sale" />
+      <Button fx:id="addFinishSaleButton" layoutX="483.0" layoutY="484.0" mnemonicParsing="false" onAction="#checkForm" prefHeight="29.0" prefWidth="95.0" text="Add Sale" />
       <ComboBox fx:id="clientComboBox" layoutX="66.0" layoutY="87.0" prefWidth="150.0" promptText="Find Cient" />
       <TextField fx:id="discountTextField" layoutX="256.0" layoutY="87.0" />
       <TableView fx:id="saleTable" layoutX="65.0" layoutY="143.0" prefHeight="268.0" prefWidth="502.0">
         <columns>
           <TableColumn fx:id="productNameColumn" prefWidth="115.0" text="Product Name" />
           <TableColumn fx:id="productBrandColumn" prefWidth="70.0" text="Brand" />
-            <TableColumn fx:id="productTypeColumn" prefWidth="70.0" text="Type" />
-            <TableColumn fx:id="totalProductPriceColumn" prefWidth="70.0" text="Price" />
-            <TableColumn fx:id="productQuantityColumn" prefWidth="70.0" text="Quantity" />
+            <TableColumn fx:id="productTypeColumn" prefWidth="122.0" text="Type" />
+            <TableColumn fx:id="productQuantityColumn" prefWidth="100.0" text="Quantity" />
+            <TableColumn fx:id="totalProductPriceColumn" prefWidth="94.0" text="Price" />
         </columns>
       </TableView>
       <Label layoutX="256.0" layoutY="61.0" text="Discount:" />
