--- a/2017/Second-Semester/Database-III/Loja-Suplementos/src/main/resources/fxml/AddSale.fxml
+++ b/2017/Second-Semester/Database-III/Loja-Suplementos/src/main/resources/fxml/AddSale.fxml
@@ -50,6 +50,6 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Button fx:id="backButton" layoutX="5.0" layoutY="14.0" mnemonicParsing="false" onAction="#cancel" />
+      <Button fx:id="backButton" layoutX="5.0" layoutY="14.0" mnemonicParsing="false" onAction="#backToMainScreen" />
    </children>
 </AnchorPane>
